[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.7",
    "beautifulsoup4>=4.12.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "requests-html>=0.10.0",
    "requests>=2.32.3",
    "riotwatcher>=3.3.0",
    "selenium>=4.26.1",
    "tinkt>=0.0.10",
    "webdriver-manager>=4.0.2",
]
